kind of fixed sidebar/legend overlapping

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -221,12 +221,12 @@ li a:hover {
   border-width: 2px;
   border-color: whitesmoke;
   border-spacing: 7px;
-  width: 100%;
-  max-width: 100%;
+  // width: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
+  table-layout: relative;
 }
 #policyLegendID {
   border-style: solid;
@@ -237,8 +237,13 @@ li a:hover {
   align-items: flex-start;
   justify-content: flex-start;
 }
-th,td {
-  padding-left: 10px;
+th,tr {
+  padding-left: 5px;
+  font-size: 1em;
+  width:50%;
+}
+td {
+  width: 50%;
 }
 @keyframes spin {
   to {
@@ -310,7 +315,7 @@ option {
   display:flex;
   flex-grow:1;
 }
-table{
-  table-layout: fixed;
-  width: 100%;
+tbody{
+  width:50%;
+  font-size: 1em;
 }
